No need to emit curvesChanged signal from mouseReleased. It's sufficient to release it from mousePress and mouseMove.

Use update() instead of repaint().

BUG: 246772

svn path=/branches/extragear/graphics/digikam/core/; revision=1217517